<resources>
    <string name="app_name">AnishDandekarTask4</string>
    <string name="product_info">Product Info</string>
    <string name="enter_product_name">enter product name</string>
    <string name="enter_product_code">enter product code</string>
    <string name="enter_product_price">enter product price</string>
    <string name="submit">submit</string>
    <string name="your_order">Your Order</string>
    <string name="product_name">product name</string>
    <string name="product_code">product code</string>
    <string name="product_price">product price</string>
</resources>